--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script async src="https://apps.8thwall.com/xrweb?appKey=7ZMWVyCH7SRFNorT1mL2bqBXrh1I90DAaylTJlbUn8XqCCjABaORUejoUdoeGikgO1CXVV"></script>
     <title>React App</title>
   </head>
   <body>
