--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <script>
+    function doShare() {
+      console.log("doShare clicked...");
+    }
+
+    function doClose() {
+      console.log("doClose clicked...");
+    }
+  </script>
 </html>
